# smart_guard

./: README.md
smart_guard_client/: client.py  client_test.py  pyproject.toml
smart_guard_old/: .gitignore  CMakeLists.txt  client.c  client.h  image.c  image.h  packet.h  server.c  server.h  server_test.c  server_test.h
smart_guard_server/: Cargo.toml
smart_guard_server/src/: client_info.rs  main.rs
