[tool.poetry]
name = "smart_guard_client"
version = "0.1.0"
description = ""
authors = ["Chu Minseok <mchu7797@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.82"
smbus2 = "^0.4.3"
gpiozero = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
